--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>My personal art style tends to revolve around material design priciples and often incorporates images as a focal point. Professionally, bold graphics and motion are my mainstays of communication.</p>
-								<p>In addition to my work shown, I'm adept in photo manipulation as a result of over 8 years of photoshop experience.</p>
+								<p>My personal art style tends to revolve around material design principles and often incorporates images as a focal point. Professionally, bold graphics and motion are my mainstays of communication.</p>
+								<p>In addition to my work shown, I'm adept in photo manipulation as a result from over 8 years of photoshop experience.</p>
 							</article>
 
 						<!-- About -->
