--- a/index.html
+++ b/index.html
@@ -52,7 +52,14 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>	
+								<meta name="viewport" content="width=device-width, initial-scale=1">
+								<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+								<style>
+								.mySlides {display:none}
+								.w3-left, .w3-right, .w3-badge {cursor:pointer}
+								.w3-badge {height:13px;width:13px;padding:0}
+								</style>
+								<h2 class="major">Work</h2>
 								<div class="w3-content w3-display-container" style="max-width:800px">
   <img class="mySlides" src="images/pic02.jpg" style="width:100%">
   <img class="mySlides" src="images/pic01.jpg" style="width:100%">
