--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 								</style>
 								<h2 class="major">Work</h2>
 								<div class="w3-content w3-display-container" style="max-width:800px">
+								<div class="w3-content w3-display-container" style="min-height:525px">
   <img class="mySlides" src="images/pic02.jpg" style="width:100%">
   <img class="mySlides" src="images/pic01.jpg" style="width:100%">
   <img class="mySlides" src="images/pic03.jpg" style="width:100%">
