--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<div class="w3-content w3-display-container" style="max-width:800px">
 								<div class="w3-content w3-display-container" style="min-height:525px">
   <img class="mySlides" src="images/pic02.jpg" style="width:100%">
-	<img class="mySlides" src="images/self2.png" style="width:100%">
+	<img class="mySlides" src="images/self2.png" style="width:69%; margin-left: 85px;">
   <img class="mySlides" src="images/pic03.jpg" style="width:100%">
   <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
     <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
