--- a/index.html
+++ b/index.html
@@ -65,12 +65,17 @@
   <img class="mySlides" src="images/pic02.jpg" style="width:100%">
 	<img class="mySlides" src="images/self2.png" style="width:69%; margin-left: 85px">
   <img class="mySlides" src="videos/Comp 1_2.mov" type="video/mp4" style="width:100%">
+	<video width="400" controls autoplay= autoplay>
+    <source src="videos/Comp 1_2.mov" type="video/mp4">
+		</video>
+
   <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
     <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
     <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
     <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
     <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
     <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+		<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
   </div>
 </div>
 
