--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 								<div class="w3-content w3-display-container" style="min-height:525px">
   <img class="mySlides" src="images/pic02.jpg" style="width:100%">
 	<img class="mySlides" src="images/self2.png" style="width:69%; margin-left: 85px">
-  <img class="mySlides" src="videos/Comp 1_2.mov" type="video/mp4" style="width:100%">
+  <img class="mySlides" src="videos/Comp 1_2.mp4" type="video/mp4" style="width:100%">
 	<video width="400" controls autoplay= autoplay>
-    <source src="videos/Comp 1_2.mov" type="video/mp4">
+    <source src="videos/Comp 1_2.mp4" type="video/mp4">
 		</video>
 
   <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
