--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <img class="mySlides" src="images/pic02.jpg" style="width:100%">
 	<img class="mySlides" src="images/self2.png" style="width:69%; margin-left: 85px">
   <img class="mySlides" src="videos/Comp 1_2.mp4" type="video/mp4" style="width:100%">
-	<video width="400" controls autoplay= autoplay>
+	<video width="400" autoplay="autoplay" loop>
     <source src="videos/Comp 1_2.mp4" type="video/mp4">
 		</video>
 
