--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<h2 class="major">Work</h2>
 								<div class="w3-content w3-display-container" style="max-width:800px">
 								<div class="w3-content w3-display-container" style="min-height:525px">
-									<video class="mySlides" width="525px" autoplay="autoplay" loop>
+									<video class="mySlides" width="525px" autoplay loop>
 										<source src="videos/Comp 1_2.mp4" type="video/mp4">
 										</video>
 	<img class="mySlides" src="images/pic02.jpg" style="width:100%">
