--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 										</video>
 	<img class="mySlides" src="images/pic02.jpg" style="width:100%">
 	<img class="mySlides" src="images/self2.png" style="width:69%; margin-left: 85px">
-  <img class="mySlides" src="images/trevor.jpg" type="video/mp4" style="width:100%">
+  <img class="mySlides" src="images/trevor.jpg" style="width:75%; margin-left: 65px">
   <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
     <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
     <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
