--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
 								.w3-badge {height:13px;width:13px;padding:0}
 								</style>
 								<h2 class="major">Work</h2>
-								<div class="w3-content w3-display-container" style="max-width:525px">
-								<div class="w3-content w3-display-container" style="min-height:525px">
+								<div class="w3-content w3-display-container" style="max-width:525px; min-height:525px">
 									<video class="mySlides" width="525px" autoplay loop>
 										<source src="videos/Comp 1_2.mp4" type="video/mp4">
 										</video>
