--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
 								.w3-badge {height:13px;width:13px;padding:0}
 								</style>
 								<h2 class="major">Work</h2>
-								<div class="w3-content w3-display-container" style="max-width:525px; min-height:525px">
-									<video class="mySlides" width="525px" autoplay loop>
+								<div class="w3-content w3-display-container" style="max-width:525px; min-height:525px; display: block;
+  margin-left: auto; margin-right: auto; align-content: center;">
+									<video class="mySlides" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);" autoplay loop>
 										<source src="videos/Comp 1_2.mp4" type="video/mp4">
 										</video>
 	<img class="mySlides" src="images/pic02.jpg" style="width:100%">
-	<img class="mySlides" src="images/self2.png" style="width:100%">
-  <img class="mySlides" src="images/trevor.jpg" style="width:100%">
+	<img class="mySlides" src="images/self2.png" style="width:69%; display: block; margin-left: auto; margin-right: auto;">
+  <img class="mySlides" src="images/trevor.jpg" style="width:75%; display: block; margin-left: auto; margin-right: auto;">
   <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
     <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
     <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
