--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<h2 class="major">Work</h2>
 								<div class="w3-content w3-display-container" style="max-width:525px; min-height:525px; display: block;
   margin-left: auto; margin-right: auto; align-content: center;">
-									<video class="mySlides" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);" autoplay loop>
+									<video autoplay class="mySlides" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);" loop>
 										<source src="videos/Comp 1_2.mp4" type="video/mp4">
 										</video>
 	<img class="mySlides" src="images/pic02.jpg" style="width:100%">
