--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 								<h2 class="major">Work</h2>
 								<div class="w3-content w3-display-container" style="max-width:525px; min-height:525px; display: block;
   margin-left: auto; margin-right: auto; align-content: center;">
-									<video autoplay class="mySlides" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);" loop>
+									<video controls autoplay class="mySlides" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);" loop>
 										<source src="videos/Comp 1_2.mp4" type="video/mp4">
 										</video>
-	<img class="mySlides" src="images/pic02.jpg" style="width:100%">
+	<img class="mySlides" src="images/pic02.jpg" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
 	<img class="mySlides" src="images/self2.png" style="width:69%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
   <img class="mySlides" src="images/trevor.jpg" style="width:75%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
   <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
