--- a/index.html
+++ b/index.html
@@ -44,63 +44,11 @@
 
 						<!-- Design -->
 							<article id="Design">
-								<meta name="viewport" content="width=device-width, initial-scale=1">
-								<link rel="stylesheet" href="assets/css/w3.css">
-								<style>
-								.mySlides {display:none}
-								.w3-left, .w3-right, .w3-badge {cursor:pointer}
-								.w3-badge {height:13px;width:13px;padding:0}
-								</style>
-								<h2 class="major">Design</h2>
-								<div class="w3-content w3-display-container" style="max-width:525px; min-height:525px; display: block;
-							margin-left: auto; margin-right: auto; align-content: center;">
-									<video playsinline autoplay muted class="ySlides" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);" loop>
-										<source src="videos/Comp 1_2.mp4" type="video/mp4">
-										</video>
-							<img class="mySlides" src="images/pic02.jpg" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
-							<img class="mySlides" src="images/self2.png" style="width:69%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
-							<img class="mySlides" src="images/trevor.jpg" style="width:75%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
-							<img class="mySlides" src="images/cover.png" style="width:70%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
-							<div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
-							<div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
-							<div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
-							<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
-							<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
-							<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
-							<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
-							<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
-							</div>
-							</div>
-
-							<script>
-							var slideIndex = 1;
-							showDivs(slideIndex);
-
-							function plusDivs(n) {
-							showDivs(slideIndex += n);
-							}
-
-							function currentDiv(n) {
-							showDivs(slideIndex = n);
-							}
-
-							function showDivs(n) {
-							var i;
-							var x = document.getElementsByClassName("mySlides");
-							var dots = document.getElementsByClassName("demo");
-							if (n > x.length) {slideIndex = 1}
-							if (n < 1) {slideIndex = x.length}
-							for (i = 0; i < x.length; i++) {
-							x[i].style.display = "none";
-							}
-							for (i = 0; i < dots.length; i++) {
-							dots[i].className = dots[i].className.replace(" w3-white", "");
-							}
-							x[slideIndex-1].style.display = "block";
-							dots[slideIndex-1].className += " w3-white";
-							}
-							</script>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+									<h2 class="major">Design</h2>
+								<span class="image main"><img src="images/cover.png" alt="" /></span>
+								<video playsinline autoplay muted class="mySlides" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);" loop>
+									<source src="videos/Comp 1_2.mp4" type="video/mp4">
+									</video>
 								<p>This site is a showcase of my <a href="#work">original designs and art pieces</a>.</p>
 								<p>Thanks for stopping by!</p>
 							</article>
