--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 						<!-- Design -->
 							<article id="Design">
 									<h2 class="major">Design</h2>
+									<video playsinline autoplay muted class="mySlides" style="width:100%;" loop>
+										<source src="videos/Comp 1_2.mp4" type="video/mp4">
+										</video>
 								<span class="image main"><img src="images/cover.png" alt="" /></span>
-								<video playsinline autoplay muted class="mySlides" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);" loop>
-									<source src="videos/Comp 1_2.mp4" type="video/mp4">
-									</video>
+
 								<p>This site is a showcase of my <a href="#work">original designs and art pieces</a>.</p>
 								<p>Thanks for stopping by!</p>
 							</article>
@@ -65,21 +66,15 @@
 								<h2 class="major">Illustration</h2>
 								<div class="w3-content w3-display-container" style="max-width:525px; min-height:525px; display: block;
   margin-left: auto; margin-right: auto; align-content: center;">
-									<video playsinline autoplay muted class="mySlides" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);" loop>
-										<source src="videos/Comp 1_2.mp4" type="video/mp4">
-										</video>
 	<img class="mySlides" src="images/pic02.jpg" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
 	<img class="mySlides" src="images/self2.png" style="width:69%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
   <img class="mySlides" src="images/trevor.jpg" style="width:75%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
-	<img class="mySlides" src="images/cover.png" style="width:70%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
   <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
     <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
     <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
     <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
     <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
     <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
-		<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
-		<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
   </div>
 </div>
 
