--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- Design -->
 							<article id="Design">
 									<h2 class="major">Design</h2>
-									<video playsinline autoplay muted class="mySlides" style="width:100%;" loop>
+									<video playsinline autoplay muted style="width:100%;" loop>
 										<source src="videos/Comp 1_2.mp4" type="video/mp4">
 										</video>
 								<span class="image main"><img src="images/cover.png" alt="" /></span>
