--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<nav>
 							<ul>
 								<li><a href="#Design">Design</a></li>
-								<li><a href="#Illustration">Illustration</a></li>
+								<li><a href="#Art">Art</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
@@ -54,8 +54,8 @@
 								<p>Thanks for stopping by!</p>
 							</article>
 
-						<!-- illustration -->
-							<article id="Illustration">
+						<!-- Art -->
+							<article id="Art">
 								<meta name="viewport" content="width=device-width, initial-scale=1">
 								<link rel="stylesheet" href="assets/css/w3.css">
 								<style>
@@ -63,7 +63,7 @@
 								.w3-left, .w3-right, .w3-badge {cursor:pointer}
 								.w3-badge {height:13px;width:13px;padding:0}
 								</style>
-								<h2 class="major">Illustration</h2>
+								<h2 class="major">Art</h2>
 								<div class="w3-content w3-display-container" style="max-width:525px; min-height:525px; display: block;
   margin-left: auto; margin-right: auto; align-content: center;">
 	<img class="mySlides" src="images/pic02.jpg" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
