--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
 										<source src="videos/Comp 1_2.mp4" type="video/mp4">
 										</video>
 								<span class="image main"><img src="images/cover.png" alt="" /></span>
-
-								<p>This site is a showcase of my <a href="#work">original designs and art pieces</a>.</p>
-								<p>Thanks for stopping by!</p>
 							</article>
 
 						<!-- Art -->
@@ -106,16 +103,15 @@ function showDivs(n) {
   dots[slideIndex-1].className += " w3-white";
 }
 </script>
-
-								<p>My personal art style tends to revolve around material design principles and often incorporates images as a focal point. Professionally, bold graphics and motion are my mainstays of communication.</p>
-								<p>In addition to my work shown, I'm adept in photo manipulation as a result from over 8 years of photoshop experience.</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<span class="image main"><img src="images/about.png" alt="" /></span>
+								<p>My personal art style tends to revolve around material design principles and often incorporates images as a focal point. Professionally, bold graphics and motion are my mainstays of communication.</p>
+	<p>In addition to my work shown, I'm adept in photo manipulation as a result from over 8 years of photoshop experience.</p>
+								<p>Thanks for stopping by!</p>
 							</article>
 
 						<!-- Contact -->
