--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ function showDivs(n) {
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="mail.php">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -331,7 +331,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 								<section>
 									<h3 class="major">Form</h3>
-									<form method="post" action="mail.php">
+									<form method="post" action="">
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
