--- a/index.html
+++ b/index.html
@@ -66,12 +66,17 @@
 	<img class="mySlides" src="images/pic02.jpg" style="width:100%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
 	<img class="mySlides" src="images/self2.png" style="width:69%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
   <img class="mySlides" src="images/trevor.jpg" style="width:75%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
+  <img class="mySlides" src="images/about.png" style="width:75%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
+	<img class="mySlides" src="images/abstract.png" style="width:75%; margin: 0; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); display: block; margin-left: auto; margin-right: auto;">
+
   <div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
     <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
     <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
     <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
     <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
     <span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+		<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(4)"></span>
+		<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(5)"></span>
   </div>
 </div>
 
