--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ function showDivs(n) {
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<h5>Jerod.Design@gmail.com</h5> for inquiries
+								<h5>Jerod.Design@gmail.com</h5>
 							</article>
 
 						<!-- Elements -->
